# reproduction-dart-sdk-53267

./: .metadata  README.md  ffigen.yaml  pubspec.yaml
example/: README.md  pubspec.yaml
example/lib/: main.dart
lib/: bomb.dart  bomb_bindings_generated.dart
linux/: CMakeLists.txt
macos/: bomb.podspec
macos/Classes/: bomb.cpp
src/: CMakeLists.txt  bomb.cpp  bomb.h
